--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>My First Git </title>
 </head>
 <body>
-    
+    <p> This is first git </p>
+    <p> 1St comit </p>
+    <h1> need to commait</h1>
+    <h3>new change</h3>
 </body>
 </html>
